# beliefspaceplanning

./: .gitignore  README.md
acrobot_control/: CMakeLists.txt  package.xml
acrobot_control/launch/: run_control.launch
acrobot_control/lqr_matlab/: compute_liniarization.m
acrobot_control/results/: cl_acrobot_ao_rrt_traj1.pkl  cl_acrobot_ao_rrt_traj2.pkl  cl_acrobot_ao_rrt_traj3.pkl  cl_acrobot_withObs_0.pkl  cl_acrobot_withObs_1.pkl  cl_acrobot_withoutObs_0.pkl  cl_acrobot_withoutObs_1.pkl  cl_naive_with_svm_goal0_run0_traj.pkl  cl_naive_with_svm_goal0_run1_traj.pkl  cl_naive_with_svm_goal0_run2_traj.pkl  control_acrobot_ao_rrt_traj1.pkl  control_acrobot_ao_rrt_traj2.pkl  control_acrobot_ao_rrt_traj3.pkl  control_naive_with_svm_goal1_run0_traj.pkl  control_naive_with_svm_goal2_run1_traj.pkl  control_robust_particles_pc_goal0_run0_traj.pkl  control_robust_particles_pc_goal4_run0_traj.pkl  control_robust_particles_pc_goal4_run1_traj.pkl  ol_acrobot_ao_rrt_traj1.pkl  ol_acrobot_ao_rrt_traj2.pkl  ol_acrobot_ao_rrt_traj3.pkl  ol_acrobot_withObs_0.pkl  ol_acrobot_withObs_1.pkl  ol_acrobot_withoutObs_0.pkl  ol_acrobot_withoutObs_1.pkl  ol_naive_with_svm_goal0_run0_traj.pkl  ol_naive_with_svm_goal0_run1_traj.pkl  ol_naive_with_svm_goal0_run2_traj.pkl
acrobot_control/src/: controller.py  general_control.py  plot_state.py  test_control.py
acrobot_control/srv/: pathTrackReq.srv
acrobot_simulator/acrobot_controllers/: CMakeLists.txt  package.xml
acrobot_simulator/acrobot_controllers/config/: acrobot_controllers.yaml
acrobot_simulator/acrobot_controllers/launch/: acrobot_controllers.launch
acrobot_simulator/acrobot_controllers/src/: acrobot_node.py  hand_node.py  my_joint_state_publisher.py
acrobot_simulator/acrobot_controllers/srv/: moveservo.srv
collect_data/: CMakeLists.txt  package.xml
collect_data/example_paths/: left_plan1.txt  mean_only_particles_goal13_run0_plan.txt  mean_only_particles_goal7_run0_plan.txt  plan1.txt  (+22 more)
control/: CMakeLists.txt  package.xml
gp_sim_node/: CMakeLists.txt  package.xml
gpup_gp_node/: CMakeLists.txt  package.xml
gpup_toy_node/: CMakeLists.txt  package.xml
nn_model/: CMakeLists.txt  package.xml
nn_tests/: nn_functions.py  nn_run.py
nn_tests_avishai/: nn_run.py  predict_nn.py
pilco/: CMakeLists.txt  package.xml
rollout_node/: CMakeLists.txt  package.xml
sim_nn_node/: CMakeLists.txt  package.xml
toy_simulator/: CMakeLists.txt  package.xml
visualizer/: viz  viz.py
(+4646 files in other folders)
