<?xml version="1.0"?>
<package format="2">
  <name>acrobot_controllers</name>
  <version>0.0.0</version>
  <description>acrobot_controllers package</description>

  <maintainer email="pracsys@todo.todo">pracsys</maintainer>

  <license>BSD</license>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  
  <build_depend>controller_interface</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>control_msgs</build_depend> 

  <!-- <run_depend>controller_interface</run_depend> -->
  <!-- <run_depend>urdf</run_depend> -->
  <!-- <run_depend>control_msgs</run_depend>  -->

  <exec_depend>controller_interface</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  

  
  
</package>
